# SkyrimSE_SimpleBeheading-NG

./: .clang-format  .clang-format-ignore  .gitignore  Build Release.bat  BuildRelease.bat  CMakeLists.txt  CMakePresets.json  EXCEPTIONS.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: CLIBNGPlugin.cmake
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
include/: PCH.h
papyrus/source/: SimpleBeheading.psc
src/: DataHandler.hpp  Events.cpp  Events.h  Main.hpp  MiscUtils.hpp  NGD-API.h  Papyrus.hpp  Plugin.cpp  Settings.hpp  XSEPlugin.cpp  dataHandler.cpp  dataHandler.h  hooks.cpp  hooks.h  papyrus.h  utils.h
